--- a/source/index.html
+++ b/source/index.html
@@ -10,14 +10,14 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
-<body class="page__body">
-  <header class="page-header">
+<body class="page__body page-body">
+  <header class="page-body__page-header page-header">
     <a class="logo" href="#">
-      <img class="logo__imag" src="img/logo.svg" width="93" height="36" alt="Kasmir website logo.">
+      <img class="logo__image" src="img/logo.svg" width="93" height="36" alt="Kasmir website logo.">
     </a>
     <nav class="nav">
       <ul class="nav__list">
-        <li class="nav__item">
+        <li class="nav__item nav__item--current">
           <a href="#">Home</a>
         </li>
         <li class="nav__item">
@@ -34,55 +34,87 @@
         </li>
       </ul>
       <div class="nav__basket">
-        <a href="#">Basket</a>
+        <svg class="nav__basket-icon" width="16" height="20" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M15 5H12V4C12 2.93913 11.5786 1.92172 10.8284 1.17157C10.0783 0.421427 9.06087 0 8 0C6.93913 0 5.92172 0.421427 5.17157 1.17157C4.42143 1.92172 4 2.93913 4 4V5H1C0.734784 5 0.48043 5.10536 0.292893 5.29289C0.105357 5.48043 0 5.73478 0 6V17C0 17.7956 0.316071 18.5587 0.87868 19.1213C1.44129 19.6839 2.20435 20 3 20H13C13.7956 20 14.5587 19.6839 15.1213 19.1213C15.6839 18.5587 16 17.7956 16 17V6C16 5.73478 15.8946 5.48043 15.7071 5.29289C15.5196 5.10536 15.2652 5 15 5ZM6 4C6 3.46957 6.21071 2.96086 6.58579 2.58579C6.96086 2.21071 7.46957 2 8 2C8.53043 2 9.03914 2.21071 9.41421 2.58579C9.78929 2.96086 10 3.46957 10 4V5H6V4ZM14 17C14 17.2652 13.8946 17.5196 13.7071 17.7071C13.5196 17.8946 13.2652 18 13 18H3C2.73478 18 2.48043 17.8946 2.29289 17.7071C2.10536 17.5196 2 17.2652 2 17V7H4V8C4 8.26522 4.10536 8.51957 4.29289 8.70711C4.48043 8.89464 4.73478 9 5 9C5.26522 9 5.51957 8.89464 5.70711 8.70711C5.89464 8.51957 6 8.26522 6 8V7H10V8C10 8.26522 10.1054 8.51957 10.2929 8.70711C10.4804 8.89464 10.7348 9 11 9C11.2652 9 11.5196 8.89464 11.7071 8.70711C11.8946 8.51957 12 8.26522 12 8V7H14V17Z" fill="#050215" />
+        </svg>
+        <div class="nav__basket-sup-icon">
+          <span class="nav__basket-quantity">1</span>
+        </div>
+
+        <a class="visually-hidden" href="#">Basket</a>
       </div>
     </nav>
   </header>
 
   <main class="page-main">
     <h1 class="visually-hidden">Welcome to the barbershop website</h1>
+    <section class="page-main__pagination pagination">
+      <h2 class="visually-hidden">Сhoose a service</h2>
+      <div class="pagination__pages">
+        <p class="pagination__number pagination__number--current">01</p>
+        <span class="pagination__separator"></span>
+        <p class="pagination__number">06</p>
+      </div>
+      <div class="control">
+        <button class="control__button" type="button">
+          <svg class="control__icon" width="16" height="30" viewBox="0 0 16 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.29289 29.7071C7.68342 30.0976 8.31658 30.0976 8.70711 29.7071L15.0711 23.3431C15.4616 22.9526 15.4616 22.3195 15.0711 21.9289C14.6805 21.5384 14.0474 21.5384 13.6569 21.9289L8 27.5858L2.34315 21.9289C1.95262 21.5384 1.31946 21.5384 0.928932 21.9289C0.538408 22.3195 0.538408 22.9526 0.928932 23.3431L7.29289 29.7071ZM7 0L7 29H9L9 0L7 0Z" fill="#B4977B" />
+          </svg>
+          <span class="visually-hidden">Next service</span>
+        </button>
+      </div>
+    </section>
     <section class="services">
       <h2 class="visually-hidden">The main services of the berbershop Kasmir</h2>
       <ul class="services__list">
-        <li class="services__item">
-          <h3 class="services__title">Lorem ipsum dolor sit amet!</h3>
-          <p class="services__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.</p>
-          <div>
+        <li class="services__item services__item--current">
+          <div class="services__picture-wrapper">
             <picture>
               <source type="image/webp" srcset="img/hairstyle.webp, img/hairstyle@2x.webp 2x">
               <img class="services__image" src="img/hairstyle.jpg" srcset="img/hairstyle@2x.jpg" width="517" height="800" alt="Сlassic style.">
             </picture>
+            <p class="services__image-title">The Best Hair Style 2022
+            </p>
+          </div>
 
-            <p class="services__image-title">The Best Hair Style 2021</p>
+          <div class="services__text-wrapper">
+            <h3 class="services__title">Lorem ipsum dolor sit amet!</h3>
+            <p class="services__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.</p>
           </div>
           <p class="services__number">01</p>
         </li>
         <li class="services__item">
-          <h3 class="services__title">Lorem ipsum!</h3>
-          <p class="services__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.</p>
-          <div>
+          <div class="services__picture-wrapper">
             <picture>
               <source type="image/webp" srcset="img/hairstyle.webp, img/hairstyle@2x.webp 2x">
               <img class="services__image" src="img/hairstyle.jpg" srcset="img/hairstyle@2x.jpg" width="517" height="800" alt="Retro style.">
             </picture>
-            <p class="services__image-title">The Best Hair Style 2022</p>
+            <p class="services__image-title">The Best Hair Style 2021
+            </p>
+          </div>
+          <div class="services__text-wrapper">
+            <h3 class="services__title">Lorem ipsum!</h3>
+            <p class="services__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.</p>
           </div>
           <p class="services__number">02</p>
         </li>
         <li class="services__item">
-          <h3 class="services__title">Lorem ipsum!</h3>
-          <p class="services__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.</p>
-          <div>
-
+          <div class="services__picture-wrapper">
             <picture>
               <source type="image/webp" srcset="img/hairstyle.webp, img/hairstyle@2x.webp 2x">
               <img class="services__image" src="img/hairstyle.jpg" srcset="img/hairstyle@2x.jpg" width="517" height="800" alt="Aggressive style.">
             </picture>
-            <p class="services__image-title">The Best Hair Style 2023</p>
+            <p class="services__image-title">The Best Hair Style 2023
+            </p>
           </div>
+          <div class="services__text-wrapper">
+            <h3 class="services__title">Lorem ipsum!</h3>
+            <p class="services__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.</p>
+          </div>
+
           <p class="services__number">03</p>
         </li>
       </ul>
@@ -90,35 +122,20 @@
         Shopping Now
       </a>
     </section>
-    <section class="pagination">
-      <h2 class="visually-hidden">Сhoose a service</h2>
-      <div class="pagination__pages">
-        <p class="pagination__number">01</p>
-        <span class="pagination__separator"></span>
-        <p class="pagination__number">06</p>
-      </div>
-      <div class="control">
-        <button class="control__button" type="button">
-          <svg width="16" height="30" viewBox="0 0 16 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M7.29289 29.7071C7.68342 30.0976 8.31658 30.0976 8.70711 29.7071L15.0711 23.3431C15.4616 22.9526 15.4616 22.3195 15.0711 21.9289C14.6805 21.5384 14.0474 21.5384 13.6569 21.9289L8 27.5858L2.34315 21.9289C1.95262 21.5384 1.31946 21.5384 0.928932 21.9289C0.538408 22.3195 0.538408 22.9526 0.928932 23.3431L7.29289 29.7071ZM7 0L7 29H9L9 0L7 0Z" fill="#B4977B" />
-          </svg>
-          <span class="visually-hidden">Next service</span>
-        </button>
-      </div>
-    </section>
+
   </main>
 
   <footer class="page-footer">
     <h2 class="visually-hidden">Сontacts</h2>
     <ul class="social-list">
       <li class="social-list__item">
-        <a href="#">Facebook</a>
+        <a class="social-list__link" href="#">Facebook</a>
       </li>
       <li class="social-list__item">
-        <a href="#">Instagram</a>
+        <a class="social-list__link" href="#">Instagram</a>
       </li>
       <li class="social-list__item">
-        <a href="#">Twitter</a>
+        <a class="social-list__link" href="#">Twitter</a>
       </li>
     </ul>
   </footer>
