--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="page__body page-body">
-  <header class="page-body__page-header page-header">
+  <header class="page-header">
     <a class="page-header__logo" href="#">
       <img src="img/logo.svg" width="93" height="36" alt="Kasmir website logo.">
     </a>
