обновление пакета squoosh и внесение изменений в script.js

--- a/source/index.html
+++ b/source/index.html
@@ -55,8 +55,6 @@
         <p class="pagination__separator">
           <span class="pagination__scroll"></span>
         </p>
-
-
         <p class="pagination__number">06</p>
       </div>
       <div class="control">
@@ -148,6 +146,77 @@
             </a>
           </div>
           <p class="services__number">03</p>
+        </li>
+        <li class="services__item">
+          <div class="services__picture-wrapper">
+            <picture>
+              <source type="image/webp" srcset="img/hairstyle.webp, img/hairstyle@2x.webp 2x">
+              <img class="services__image" src="img/hairstyle.jpg" srcset="img/hairstyle@2x.jpg" width="517" height="800" alt="Aggressive style.">
+            </picture>
+            <p class="services__image-title">The Best Hair Style 2023
+            </p>
+          </div>
+          <div class="services__text-wrapper">
+            <h3 class="services__title">Lorem ipsum!</h3>
+            <p class="services__description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.<br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.<br />
+            </p>
+            <a class="services__button" href="#">
+              Shopping Now
+            </a>
+          </div>
+          <p class="services__number">04</p>
+        </li>
+        <li class="services__item">
+          <div class="services__picture-wrapper">
+            <picture>
+              <source type="image/webp" srcset="img/hairstyle.webp, img/hairstyle@2x.webp 2x">
+              <img class="services__image" src="img/hairstyle.jpg" srcset="img/hairstyle@2x.jpg" width="517" height="800" alt="Aggressive style.">
+            </picture>
+            <p class="services__image-title">The Best Hair Style 2023
+            </p>
+          </div>
+          <div class="services__text-wrapper">
+            <h3 class="services__title">Lorem ipsum!</h3>
+            <p class="services__description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.<br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.<br />
+            </p>
+            <a class="services__button" href="#">
+              Shopping Now
+            </a>
+          </div>
+          <p class="services__number">05</p>
+        </li>
+        <li class="services__item">
+          <div class="services__picture-wrapper">
+            <picture>
+              <source type="image/webp" srcset="img/hairstyle.webp, img/hairstyle@2x.webp 2x">
+              <img class="services__image" src="img/hairstyle.jpg" srcset="img/hairstyle@2x.jpg" width="517" height="800" alt="Aggressive style.">
+            </picture>
+            <p class="services__image-title">The Best Hair Style 2023
+            </p>
+          </div>
+          <div class="services__text-wrapper">
+            <h3 class="services__title">Lorem ipsum!</h3>
+            <p class="services__description">
+             sectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.<br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.<br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.<br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.<br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.<br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.<br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.<br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.<br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.<br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non felis non at tristique. Est ante magna diam magna pharetra. Turpis sagittis consectetur est, integer sed. Sagittis malesuada tellus diam sapien platea.
+            </p>
+            <a class="services__button" href="#">
+              Shopping Now
+            </a>
+          </div>
+          <p class="services__number">06</p>
         </li>
       </ul>
     </section>
