--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="title" content="Kasmir — barbershop network">
   <meta name="description" content="The Kasmir barbershop network is everything a man needs: an atmosphere of brutality, great company, drinks, professionalism and European traditions">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kasmir</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
